--- a/dcho/cpp00/ex00/Makefile
+++ b/dcho/cpp00/ex00/Makefile
@@ -6,24 +6,24 @@
 #    By: dcho <dcho@student.42seoul.kr>             +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/11/10 13:57:42 by dcho              #+#    #+#              #
-#    Updated: 2021/11/10 14:32:43 by dcho             ###   ########.fr        #
+#    Updated: 2021/11/12 15:59:28 by dcho             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 CC = clang++
 CFLAGS = -Wall -Wextra -Werror
 
-RM = rm -f
+RM = rm -rf
 
 NAME = megaphone
 
 SRC =	megaphone.cpp
-
 SRC_DIR = ./srcs/
-
 SRCS = $(addprefix $(SRC_DIR),$(SRC))
 
-OBJS = $(SRCS:.c=.o)
+OBJ = $(SRC:.cpp=.o)
+OBJ_DIR = ./objs/
+OBJS = $(addprefix $(OBJ_DIR), $(OBJ))
 
 all : $(NAME)
 
@@ -31,11 +31,12 @@ $(NAME) : $(OBJS)
 		$(CC) $(CFLAGS) $^ \
 		-o $@
 
-%.o : $(SRC_DIR)/%.c
+$(OBJ_DIR)%.o : $(SRC_DIR)/%.cpp
+		@mkdir -p $(OBJ_DIR)
 		$(CC) $(CFLAGS) -o $@ -c $<
 
 clean:
-		$(RM) $(OBJS)
+		$(RM) $(OBJ_DIR)
 
 fclean: clean
 		$(RM) $(NAME)
