--- a/dcho/cpp00/ex02/Makefile
+++ b/dcho/cpp00/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: dcho <dcho@student.42seoul.kr>             +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/11/10 13:57:42 by dcho              #+#    #+#              #
-#    Updated: 2021/11/17 15:29:58 by dcho             ###   ########.fr        #
+#    Updated: 2021/11/17 15:37:38 by dcho             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,10 +16,12 @@ CDEBUG = -fsanitize=address -g -std=c++98
 
 RM = rm -rf
 
-NAME = megaphone
+NAME = program
 
-SRC =	megaphone.cpp
-SRC_DIR = ./srcs/
+SRC =	tests.cpp\
+		Account.cpp
+
+SRC_DIR = ./
 SRCS = $(addprefix $(SRC_DIR),$(SRC))
 
 OBJ = $(SRC:.cpp=.o)
@@ -32,9 +34,10 @@ $(NAME) : $(OBJS)
 		$(CC) $(CFLAGS) $^ \
 		-o $@
 
-$(OBJ_DIR)%.o : $(SRC_DIR)/%.cpp
+$(OBJ_DIR)%.o : $(SRC_DIR)%.cpp
 		@mkdir -p $(OBJ_DIR)
 		$(CC) $(CFLAGS) -o $@ -c $<
+
 
 clean:
 		$(RM) $(OBJ_DIR)
