--- a/dcho/cpp01/ex05/Makefile
+++ b/dcho/cpp01/ex05/Makefile
@@ -6,9 +6,7 @@ RM = rm -rf
 NAME = program
 
 SRC =	main.cpp\
-		Zombie.cpp\
-		newZombie.cpp\
-		randomChump.cpp
+		Karen.cpp
 
 SRC_DIR = ./srcs/
 SRCS = $(addprefix $(SRC_DIR),$(SRC))
@@ -32,6 +30,7 @@ clean:
 
 fclean: clean
 		$(RM) $(NAME)
+		$(RM) *.replace
 
 re : fclean all
 
