--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,7 +78,8 @@
 		"*.tcc": "cpp",
 		"memory_resource": "cpp",
 		"stop_token": "cpp",
-		"__functional_03": "cpp"
+		"__functional_03": "cpp",
+		"filesystem": "cpp"
 	},
 	"C_Cpp.errorSquiggles": "Disabled"
 }
